UCG/Configurations/Kubernetes/DevCloud-Config/nodered-deployment-data-mapped-dev-cloud.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nodered
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nodered
    spec:
      containers:
      - name: nodered
        image: dennisnotojr/node-red-docker-node8-nr-18-data-mapped:version-2
        ports: 
         - containerPort: 1880
           protocol: TCP
        imagePullPolicy: Always
        resources:
          limits:
            cpu: 0.8
            memory: 512Mi
          requests:  
            cpu: 0.5
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /data
      volumes:
      - name: data
        persistentVolumeClaim:
         claimName: ucg-nodered-data-dev
