UCG/Configurations/Kubernetes/DevCloud-Config/nodered-service-dev-cloud.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodered
  labels:
     app: nodered
spec:
  selector:
    app: nodered
  type: LoadBalancer
  #externalIPs : ["169.60.13.101"]
  ports:
   - protocol: TCP  
     port: 1880
