UCG/Configurations/Kubernetes/DevCloud-Config/ingress-dev-cloud.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ucg-ingress
spec:
  tls:
  - hosts:
    - ucg-clusterdev.us-south.containers.mybluemix.net
    secretName: ucg-clusterdev
  rules:
  - host: ucg-clusterdev.us-south.containers.mybluemix.net
    http:
      paths:
      - path: /
        backend:
          serviceName: nodered
          servicePort: 1880
      - path: /carla
        backend:
          serviceName: ucg-carla
          servicePort: 80
